--- a/manual/ru/max/Material-Library.html
+++ b/manual/ru/max/Material-Library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: Using Material Library - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Использование Библиотеки Материалов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to use the material library in Verge3D for 3ds Max."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Using Material Library / 3ds Max</h1>
+    <h1>Использование Библиотеки Материалов / 3ds Max</h1>
 
     <p>
-      Verge3D material library is a collection of ready-to-use materials which you can assign to your 3ds Max models. Below is the description of a recommended workflow on how to install and use these materials efficiently.
+      Библиотека материалов Verge3D, это коллекция готовых к использованию материалов, которые вы можете назначить своей модели в 3ds Max. Ниже, вы можете ознакомиться с процессом установки и эффективным методом использования данных материалов.
     </p>
 
     <img src="files/mat-library-maya/promo.jpg" class="centered" style="max-width: 819px">
@@ -24,53 +24,53 @@
 
     [anchor:installing]
 
-    <h2>Installing</h2>
+    <h2>Установка</h2>
 
     <p>
-      Material library is available in Soft8Soft store in the form of the <a href="https://www.soft8soft.com/product/verge3d-for-3ds-max-essential-material-pack/" target="_blank">3ds Max Essential Material Pack</a>.
+      В магазине Soft8Soft доступна библиотека материалов <a href="https://www.soft8soft.com/product/verge3d-for-3ds-max-essential-material-pack/" target="_blank">3ds Max Essential Material Pack</a>
     </p>
 
     <p>
-      Simply unzip the archive with a library pack to any folder on your computer. Inside this folder you can find a main <strong>.mat</strong> file which represents the material collection. There are also numerous <strong>.max</strong> files (one per material), however in most situations you don't need to touch them.
+      Просто распакуйте архив с библиотекой материалов в любую папку на вашем компьютере. В этой папке находится основной файл <strong>.mat</strong>, представляющий коллекцию материалов. Там же находятся многочисленные файлы <strong>.max</strong> (по одному на материал), однако в большинстве случаев они вам не понадобятся. 
     </p>
 
     <img src="files/mat-library-max/library-contents.jpg" class="centered" style="max-width: 893px">
 
     <p>
-      The textures used in the materials are located in the *material_maps* folder. The folder *environments* contains 3 variants of HDR images that you can use for the environment (each variant comes in 3 resolutions: 1k, 2k and 4k).
+      Текстуры используемые в материалах расположены в папке с названием *material_maps*. Папка *environments* содержит три варианта HDR изображений, которые вы можете использовать для окружения (каждый вариант представлен в разрешении: 1k, 2k и 4k).
     </p>
 
 
     [anchor:adding_materials_to_project]
 
-    <h2>Adding Materials to Project</h2>
+    <h2>Добавление Материалов в Проект</h2>
 
     <p>
-      Before adding material library, make sure your current renderer is set to *ART* or *Arnold*. In case of Arnold, you also need to specify the *Legacy 3ds Max Map Support* option:
+      Перед добавлением библиотеки материалов убедитесь, что ваш текущий рендерер установлен на *ART* или *Arnold*. В случае с Arnold вам также необходимо указать опцию *Legacy 3ds Max Map Support*:
     </p>
 
     <img src="files/mat-library-max/arnold-render-setup.jpg" alt="Configuring Arnold renderer with Legacy 3ds Max Map Support" class="centered" style="max-width: 407px">
 
     <p>
-      In order to use a library material in a project, invoke the <strong>Open Material Library...</strong> option in the <strong>Material/Map Browser</strong>:
+      Чтобы использовать библиотечный материал в проекте, вызовите опцию <strong>Open Material Library...</strong> в <strong>Material/Map Browser</strong>: 
     </p>
 
     <img src="files/mat-library-max/open-material-library.jpg" alt="Opening 3ds Max Material Library" class="centered" style="max-width: 716px">
 
     <p>
-      Then navigate to the library folder, select <strong>Verge3D 3ds Max Essential Material Pack.mat</strong> file and click *Open*:
+      Затем перейдите в папку library, выберите файл <strong>Verge3D 3ds Max Essential Material Pack.mat</strong> и нажмите *Open*:
     </p>
 
     <img src="files/mat-library-max/import-material-library.jpg" class="centered" style="max-width: 819px">
 
     <p>
-      The list of materials should appear in the *Material/Map Browser*:
+      Список материалов должен появиться в *Material/Map Browser*: 
     </p>
 
     <img src="files/mat-library-max/essential-material-pack-list.jpg" class="centered" style="max-width: 267px">
 
     <p>
-      To assign any of these to a model, select a model, then drag material to the *View* area, then click on the material by using right mouse button, then select *Assign Material to Selection*:
+      Чтобы назначить любой из них на модель, выберите модель, затем перетащите материал в область *View*, затем нажмите на материал правой кнопкой мыши и выберите *Assign Material to Selection*:
     </p>
 
     <img src="files/mat-library-max/assign-material.jpg" alt="Assigning 3ds Max Material">
@@ -79,53 +79,54 @@
 
     [anchor:setting_up_the_environment]
 
-    <h2>Setting up the Environment</h2>
+    <h2>Настройка Окружения</h2>
 
     <p>
-      Physical materials require the environment to be set up, otherwise the materials will look dark and non-reflective. The environment is already set up in Verge3D's default cube project which you can use as a basis for your own app.
+      Физические материалы требуют настройки окружения, иначе материалы будут выглядеть темными и неотражающими. Среда уже настроена в проекте куба Verge3D по умолчанию, который вы можете использовать в качестве основы для собственного приложения.
     </p>
+
     <p>
-      Alternatively, you can configure the environment from scratch as shown in this <a href="https://youtu.be/s_QjxCr8I6k" target="_blank">video tutorial</a>. You can use either of HDR textures in the *environments* folder of a material pack for this purpose.
+      Кроме того, вы можете настроить окружение с нуля, как показано в этом <a href="https://youtu.be/s_QjxCr8I6k" target="_blank">видеоуроке</a>. Для этого можно использовать любую из HDR-текстур в папке *environments* пакета материалов.
     </p>
 
 
     [anchor:uv_mapping]
 
-    <h2>UV Mapping</h2>
+    <h2>Развёртка</h2>
 
     <p>
-      Most materials in the library require models to be UV-mapped. Consider unwrapping your models for best results.
+      Большинство материалов библиотеки требуют, чтобы у моделей была развёртка. Подумайте о том, чтобы развернуть свои модели для достижения наилучшего результата.
     </p>
 
 
     [anchor:relocating_textures_to_app_folder]
 
-    <h2>Relocating Textures to App Folder</h2>
+    <h2>Перемещение текстур в Папку Приложения</h2>
 
     <p>
-      For the sake of integrity of your application (which is important if you're transferring your project sources to a third party), you can save the textures used by appended materials in the app folder as described below.
+      Для обеспечения целостности вашего приложения (что важно, если вы передаете исходники проекта третьим лицам), вы можете сохранить текстуры, используемые добавляемыми материалами, в папке app, как описано ниже.
     </p>
 
     <p>
-      Open the *Resource Collector* utility, then specify path to your project. Make sure that *Collect Bitmaps* is checked, also enable the *Update Materials* option. Collect your files by clicking on the *Begin* button:
+      Откройте утилиту *Resource Collector*, затем укажите путь к вашему проекту. Убедитесь, что опция *Collect Bitmaps* отмечена, также включите опцию *Update Materials*. Соберите файлы, нажав на кнопку *Begin*:
     </p>
 
     <img src="files/mat-library-max/resource-collector.jpg" alt="Using 3ds Max Resource Collector" class="centered" style="max-width: 647px">
 
     <p>
-      You can check the integrity of your application by moving its folder to another location in your file system. Open the *max* file and make sure no errors with missing assets are generated.
+      Вы можете проверить целостность приложения, переместив его папку в другое место в вашей файловой системе. Откройте файл *max* и убедитесь, что не возникло ошибок с отсутствующими активами.
     </p>
 
-    <h2>See Also</h2>
+    <h2>Смотрите также</h2>
 
     <p>
-      Familiarize yourself with the material system used in Verge3D by reading the <a href="manual/ru/max/Material-System.html">Material System Overview</a> and <a href="manual/ru/max/Materials-Maps-Reference.html">Materials and Maps</a> guides.
+      Ознакомьтесь с системой материалов, используемой в Verge3D, прочитав руководства <a href="manual/ru/max/Material-System.html">Material System Overview</a> и <a href="manual/ru/max/Materials-Maps-Reference.html">Materials and Maps</a>.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
    </article></body>
