--- a/manual/ru/max/Material-System.html
+++ b/manual/ru/max/Material-System.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: Material System Overview - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Обзор системы материалов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn what kinds of 3ds Max materials are supported in Verge3D."/>
     <base href="../../../" />
@@ -10,33 +10,33 @@
   </head>
   <body><article>
 
-    <h1>Material System Overview / 3ds Max</h1>
+    <h1>Обзор системы материалов / 3ds Max</h1>
 
     <p>
-      Verge3D supports the following types of materials available in 3ds Max:
+      Verge3D поддерживает следующие типы материалов в 3ds Max:
     </p>
 
     <!-- this text is not the table of contents -->
 
     <ul>
       <li>
-        <a href="manual/ru/max/Material-System.html#Physical">Physical</a> with ART as reference renderer
+        <a href="manual/ru/max/Material-System.html#Physical">Physical</a> с ART в качестве эталонного рендерера
       </li>
       <li>
-        <a href="manual/ru/max/Material-System.html#Standard">Standard</a> with Scanline as reference renderer
+        <a href="manual/ru/max/Material-System.html#Standard">Standard</a> с Scanline в качестве эталонного рендерера
       </li>
       <li>
-        <a href="manual/ru/max/Material-System.html#Physical_glTF_compliant">Physical glTF-compliant</a>
+        <a href="manual/ru/max/Material-System.html#Physical_glTF_compliant">Physical glTF-совместимый</a>
       </li>
     </ul>
 
 
     [anchor:Physical]
 
-    <h2>Physical Materials</h2>
+    <h2>Физические материалы</h2>
 
     <p>
-      Physical materials are GPU intensive, but look more realistic and also easier to use than standard materials. They work especially well for representing metallic and other non-trivial surfaces. Verge3D strives to reproduce physical materials using Autodesk ART renderer as a reference.
+      Физические материалы требуют больших затрат GPU, но выглядят более реалистично, а также более просты в использовании, чем стандартные материалы. Они особенно хорошо подходят для представления металлических и других нетривиальных поверхностей. Verge3D стремится воспроизводить физические материалы, используя в качестве эталона рендерер Autodesk ART.
     </p>
 
     <img src="files/material-system-max/physical-material-example.jpg" class="centered">
@@ -44,19 +44,19 @@
     <img src="files/material-system-max/physical-material.jpg" class="centered">
 
     <p>
-    You can set up the environment texture using the Environment and Effects window.
+      Вы можете настроить текстуру окружения с помощью окна "Environment and Effects".
     </p>
 
     <img src="files/material-system-max/environment.jpg" class="centered" style="max-width: 340px">
 
     <p>
-    Most 3ds Max' presets of physical materials are ready to be used with Verge3D.
+      Большинство пресетов физических материалов 3ds Max готовы к использованию в Verge3D.
     </p>
 
     <img src="files/material-system-max/physical-material-presets.jpg" class="centered" style="max-width: 693px">
 
     <p>
-    Material parameters can be animated or changed with Puzzles or with code using Float or Point4 material Controllers.
+      Параметры материала можно анимировать или изменять с помощью пазлов или кода, используя контроллеры материалов Float или Point4.
     </p>
 
     <img src="files/material-system-max/texture-atlas-animated.jpg" class="centered" style="max-width: 819px">
@@ -64,52 +64,52 @@
 
     [anchor:Standard]
 
-    <h2>Standard Materials</h2>
+    <h2>Стандартные материалы</h2>
 
     <p>
-    These are default materials in 3ds Max which are well suited for viewport display. Verge3D strives to reproduce them using Autodesk Scanline renderer as a reference.
+      Это материалы по умолчанию в 3ds Max, которые хорошо подходят для отображения во вьюпорте. Verge3D стремится воспроизвести их, используя в качестве эталона рендер Autodesk Scanline.
     </p>
 
     <img src="files/material-system-max/standard-material-example.jpg" class="centered">
 
     <p>
-    Standard materials are flexible and powerful enough for creating various setups.
+      Стандартные материалы достаточно гибкие и мощные для создания различных настроек.
     </p>
 
     <img src="files/material-system-max/standard-material.jpg" class="centered">
 
     <p>
-    Material parameters can be animated or changed with Puzzles or with code using Float or Point3 material Controllers.
+      Параметры материала можно анимировать или изменять с помощью головоломок или с помощью кода, используя контроллеры материалов Float или Point3.
     </p>
 
 
     [anchor:Physical_glTF_compliant]
 
-    <h2>glTF-Compliant Materials</h2>
+    <h2>glTF-совместимые Материалы</h2>
 
     <p>
-    If your content needs to be compatible with <a href="https://www.khronos.org/news/press/khronos-releases-gltf-2.0-specification" target="_blank">glTF 2.0 standard</a> for some reason, you can use physical materials for this purpose as described below.
+      Если по каким-то причинам ваш контент должен быть совместим со <a href="https://www.khronos.org/news/press/khronos-releases-gltf-2.0-specification" target="_blank">стандартом glTF 2.0</a>, вы можете использовать для этого физические материалы, как описано ниже.
     </p>
 
     <p>
-    According to glTF 2.0 standard, material information is encoded in a set of textures: base color, occlusion-roughness-metallic packed in R, G and B channels respectively, and normal.
+      Согласно стандарту glTF 2.0, информация о материале кодируется в наборе текстур: базовый цвет, occlusion-roughness-metallic (окклюзия-шероховатость-металлик), упакованные в каналы R, G и B соответственно, и нормаль.
     </p>
 
     <img src="files/material-system-max/gltf-physical-material-example.jpg" class="centered">
 
     <p>
-    You must, however, use separate bitmaps for occlusion, roughness and metallic. Verge3D will automatically combine them in a single texture upon export. Be sure to enable <strong>glTF 2.0 compatible</strong> checkbox in the material settings panel.
+      Однако вы должны использовать отдельные растровые изображения для окклюзии, шероховатости и металлика. Verge3D автоматически объединит их в одну текстуру при экспорте. Обязательно установите флажок <strong>glTF 2.0 compatible</strong> в панели настроек материала.
     </p>
 
     <img src="files/material-system-max/gltf-physical-material.jpg" class="centered">
 
     <p>
-    Please refer to the <a href="manual/ru/max/GLTF-Materials.html">glTF Materials</a> section of this User Manual for more information on how to set up these materials.
+      Дополнительную информацию о настройке этих материалов см. в разделе <a href="manual/ru/max/GLTF-Materials.html">Материалы glTF</a> данного руководства пользователя. 
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
