--- a/manual/ru/max/Morphing.html
+++ b/manual/ru/max/Morphing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: Morphing - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Ключи формы (также известные как морфинг) - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to setup and use morphing in Verge3D for 3ds Max."/>
     <base href="../../../" />
@@ -10,34 +10,28 @@
   </head>
   <body><article>
 
-    <h1>Morphing / 3ds Max</h1>
+    <h1>Ключи формы (также известные как морфинг)/ 3ds Max</h1>
 
-    <p>Morphing is a feature which allows you to modify mesh objects in real-time. The most common use case for this feature is facial animation. Morphing also suits well to creating parametric objects which can interactively change their dimensions, shape, thickness, holes, profiles etc.</p>
+    <p>Морфинг - это функция, позволяющая изменять форму объектов в режиме реального времени. Наиболее распространенный вариант использования этой функции - лицевая анимация. Морфинг также хорошо подходит для создания параметрических объектов, которые могут интерактивно изменять свои размеры, форму, толщину, отверстия, профили и т.д.</p>
 
-    <p>See the following demo as an example:</p>
+    <p>В качестве примера смотрите следующую демонстрацию:</p>
 
     <iframe class="video-480p" src="https://www.youtube.com/embed/5TbRgUcjwa4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:setting_up]
 
-    <h2>Setting Up</h2>
+    <h2>Настройка</h2>
 
     <p>
-        In 3ds Max, add a <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Modifiers/files/GUID-506247E2-1F5D-4857-998E-8256FD88626D-htm.html" target="_blank">Morpher modifier</a>,
-        and setup the channels for morph targets. Please notice that due to
-        hardware constraints, the total number of active morph targets is
-        limited. Most of the time it's 5 morph targets for skinned objects and 6
-        for others. See <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">this topic</a>
-        for more information about calculating the limit in more complex cases.<br/><br/>
+      В 3ds Max добавьте модификатор <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Modifiers/files/GUID-506247E2-1F5D-4857-998E-8256FD88626D-htm.html" target="_blank">Morpher</a> и настройте каналы для целей морфа. Обратите внимание, что из-за аппаратных ограничений общее количество активных целей морфинга ограничено. Чаще всего это 5  для объектов со скинингом и 6 для объектов без. Дополнительную информацию о расчете ограничения в более сложных случаях см. в <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">этой теме</a>.<br/><br/>
 
-        During rendering, the engine selects 6 morph targets with largest
-        influences ignoring all excessive morph targets.
+      Во время рендеринга движок выбирает 6 морф-целей с наибольшим влиянием, игнорируя все избыточные морф-цели.
     </p>
 
     <img src="files/morphing-max/morpher-modifier.jpg" alt="Morphing in Verge3D for 3ds Max" class="centered" style="max-width: 1000px">
@@ -45,17 +39,17 @@
 
     [anchor:controlling_with_puzzles]
 
-    <h2>Controlling via Puzzles</h2>
+    <h2>Управление с помощью Puzzles</h2>
 
     <p>
-    To manipulate your morph targets in real-time there are two puzzles: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> and <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>. See the demo called "Parametric Models" for more details.
+      Для манипулирования объектами морфа в реальном времени есть две головоломки: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> и <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>. Более подробную информацию смотрите в демонстрации "Параметрические модели".
     </p>
 
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
