--- a/manual/ru/maya/Animation.html
+++ b/manual/ru/maya/Animation.html
@@ -13,7 +13,7 @@
     <h1>Animation / Maya</h1>
 
     <p>
-      This page contains the information about Maya's animation types which can be used with Verge3D, as well as supported playback options and means to control the animation interactively.
+      Эта страница содержит информацию о типах анимации Maya, которые можно использовать с Verge3D, а также о поддерживаемых вариантах воспроизведения и средствах интерактивного управления анимацией.
     </p>
 
     [contents]
@@ -21,49 +21,49 @@
 
     [anchor:setting_up_maya]
 
-    <h2>Setting Up in Maya</h2>
+    <h2>Настройки в Maya</h2>
 
 
     [anchor:Whole_Object_Animation]
 
-    <h3>Whole-Object Animation</h3>
+    <h3>Объектная анимация </h3>
 
     <p>
-      Animation keyframes can be added in standard way in Maya, by using the <strong>Key > Set Key</strong> from the Key menu in the Animation menu set or pressing *S* on the keyboard.
+      Ключевые кадры анимации можно добавить стандартным способом в Maya, используя команду <strong>Key > Set Key</strong> из меню Animation или нажав S на клавиатуре.
     </p>
 
     <img src="files/animation-maya/insert-keyframe.jpg" alt="Inserting keyframes in Verge3D for Maya" class="centered" style="max-width: 419px">
 
     <p>
-      For performance reasons we recommend setting keys separately, only for channels which are required to be animated, e.g:
+      Для лучшей производительности мы рекомендуем устанавливать ключи отдельно, только для каналов, которые должны быть анимированы, например:
     </p>
 
     <ul>
-      <li>*Translate* - using <strong>Key > Set Key on Translate</strong> menu or *Shift-W* hotkey.</li>
-      <li>*Rotate* - using <strong>Key > Set Key on Rotate</strong> menu or *Shift-E* hotkey.</li>
-      <li>*Scale* - using <strong>Key > Set Key on Scale</strong> menu or *Shift-R* hotkey.</li>
+      <li>*Translate* - нажмите <strong>Key > Set Key в меню Translate</strong> или горячие клавиши *Shift-W*.</li>
+      <li>*Rotate* - нажмите <strong>Key > Set Key в меню Rotate</strong> или горячие клавиши *Shift-E*.</li>
+      <li>*Scale* - нажмите <strong>Key > Set Key в меню Scale</strong> или горячие клавиши *Shift-R*.</li>
     </ul>
 
     [anchor:Skeletal_Animation]
 
-    <h3>Skeletal Animation</h3>
+    <h3>Костная Анимация</h3>
 
     <p>
-      An object can be animated in Verge3D by using Maya's skeletons. Verge3D support maximum 4 weights per joint (4 most influential weights are selected, others are ignored).
+      Объект может быть анимирован в Verge3D с помощью костей Maya. Verge3D поддерживает максимум 4 веса на одну кость (взаимодействовать с костью будут только 4 веса с самым большим значением влияния, остальные будут проигнорированы).
     </p>
 
     <img src="files/animation-maya/skeletal-animation.jpg" alt="Inserting keyframes for skeletal animation in Verge3D for Maya" class="centered" style="max-width: 592px">
 
     <p>
-      Skeletons can be animated directly by setting transformation keys on joints or by utilizing auxiliary controllers such as IK handles/effectors. To animate bones indirectly, enable *Skeleton Root* and *Custom Frame Range* property on their common parent object and set proper *From*/*To* as frame values. See <a href="manual/ru/maya/Animation.html#Verge3D_Per_Object_Settings">below</a> for more info.
+      Кости можно анимировать напрямую, устанавливая ключи трансформации или используя вспомогательные контроллеры, такие как IK-ручки/эффекторы. Чтобы анимировать кости косвенно, включите свойства *Skeleton Root* и *Custom Frame Range* на их общем родительском объекте и установите соответствующие значения *From*/*To* в качестве значений кадров. Более подробную информацию смотрите <a href="manual/ru/maya/Animation.html#Verge3D_Per_Object_Settings">ниже</a>.
     </p>
 
     [anchor:Blend_Shape_Animation]
 
-    <h3>Blend Shape Animation</h3>
+    <h3>Морфинг</h3>
 
     <p>
-      You can add <a href="manual/ru/maya/Blend-Shapes.html">blend shapes</a> to an object in standard ways in Maya and then animate their weights using keyframes.
+      Вы можете добавить <a href="manual/ru/maya/Blend-Shapes.html">blend shapes</a> к объекту стандартным способом в Maya, а затем анимировать их веса с помощью ключевых кадров.
     </p>
 
     <img src="files/animation-maya/blend-shape-animation.jpg" alt="Shape key animation in Verge3D for Maya" class="centered" style="max-width: 681px">
@@ -71,18 +71,18 @@
 
     [anchor:Material_Animation]
 
-    <h3>Material Animation</h3>
+    <h3>Анимация Материалов</h3>
 
     <p>
-      To use keyframed material animation, simply set key on any material parameter.
+      Чтобы использовать анимацию материала с ключевыми кадрами, просто установите ключи на любом параметре материала.
     </p>
 
     [anchor:Procedural_Animation]
 
-    <h3>Procedural Animation</h3>
+    <h3>Процедурная анимация</h3>
 
     <p>
-      Instead of playing back some animation which was pre-made in Maya, you can use Puzzles or JavaScript to modify coordinates or some other parameters with time. Particularly, the <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle (based on the Tween.js library) is a convenient way to create your own animation on the fly.
+      Вместо того чтобы воспроизводить анимацию, заранее созданную в Maya, вы можете использовать пазлы или JavaScript для изменения координат или некоторых других параметров связанных со временем. В частности, пазл <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> (основанный на библиотеке Tween.js) является удобным способом создания собственной анимации на лету. 
     </p>
 
     <img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="Using the animate param puzzle to create animation in Verge3D for Maya" class="centered" style="max-width: 1000px">
@@ -90,14 +90,14 @@
 
     [anchor:Playback_Options]
 
-    <h2>Playback Options</h2>
+    <h2>Параметры воспроизведения</h2>
 
     [anchor:Verge3D_Global_Settings]
 
-    <h3>Verge3D Global Animation Settings</h3>
+    <h3>Глобальные Настройки Анимации Verge3D</h3>
 
     <p>
-      By using the *Animation* section of *Verge3D Export Settings* you can assign global animation parameters which will affect all animatable objects in your scene.
+      С помощью *Animation*, раздела *Verge3D Export Settings* вы можете назначить глобальные параметры анимации, которые будут влиять на все анимируемые объекты в вашей сцене. 
     </p>
 
     <img src="files/animation-maya/global-animation-settings.jpg" alt="Verge3D for Maya animation settings panel" class="centered" style="max-width: 411px">
@@ -107,28 +107,28 @@
         Export Animations
       </dt>
       <dd>
-        export scene animations to be used in Verge3D.
+        экспортировать анимацию сцены для использования в Verge3D.
       </dd>
       <dt>
         Export Within Playback Range
       </dt>
       <dd>
-        by default Verge3D exporter honors per-object animation keyframe ranges. Enabling this option will force exporter to honor global playback range.
+        по умолчанию экспортер Verge3D учитывает диапазоны ключевых кадров анимации каждого объекта. Включение этого параметра заставит экспортер учитывать глобальный диапазон воспроизведения.
       </dd>
       <dt>
         Keyframes Start with 0
       </dt>
       <dd>
-        edit exported animation keyframes so they always start with frame 0.
+        сделать так, чтобы экспортированные ключевые кадры анимации всегда начинались с нулевого кадра.
       </dd>
     </dl>
 
     [anchor:Verge3D_Per_Object_Settings]
 
-    <h3>Verge3D Per-Object Animation Settings</h3>
+    <h3>Настройки Анимации в Verge3D для Каждого Объекта</h3>
 
     <p>
-      Each object in Maya is assigned with Verge3D settings, including the settings for animation playback.
+      Каждому объекту в 3ds Max назначаются настройки Verge3D, включая настройки для воспроизведения анимации.
     </p>
 
     <img src="files/animation-maya/object-animation-settings.jpg" alt="Verge3D for Maya animation settings panel" class="centered" style="max-width: 443px">
@@ -142,53 +142,53 @@
         Auto Start
       </dt>
       <dd>
-        whether this object's animation will start after the scene is loaded.
+        начнется ли анимация этого объекта после загрузки сцены.
       </dd>
       <dt>
         Loop Mode
       </dt>
       <dd>
-        playback mode: *Repeat* - plays from the start to the end and repeats, *Once* - plays one time and stops, *Ping Pong* - plays from the start to the end and then in reverse.
+        режим воспроизведения: *Repeat* - воспроизводится с начала до конца и повторяется, *Once* - воспроизводится один раз и останавливается, *Ping Pong* - воспроизводится с начала до конца, а затем наоборот. 
       </dd>
       <dt>
         Repeat Infinitely
       </dt>
       <dd>
-        whether this object's animation will be played all over again. Valid only for *Repeat* and *Ping Pong* modes.
+        будет ли анимация этого объекта воспроизводиться заново. Действует только для режимов *Repeat* и *Ping Pong*.
       </dd>
       <dt>
         Repeat Count
       </dt>
       <dd>
-        how many times the animation will be played. Valid only for *Repeat* and *Ping Pong* modes if *Repeat Infinitely* is disabled.
+        сколько раз будет воспроизводиться анимация. Действует только для режимов *Repeat* и *Ping Pong*, если отключена функция *Repeat Infinitely*.
       </dd>
       <dt>
         Offset
       </dt>
       <dd>
-        how many frames will be skipped before the animation starts.
+        сколько кадров будет пропущено перед началом анимации. 
       </dd>
       <dt>
         Custom Frame Range
       </dt>
       <dd>
-        enable and specify *From*/*To* values to override object's keyframe ranges or global animation timeline. Activating this property will force an object to be animated even if it does not have any keyframes. This is useful to bake indirect animation such as IK handles/effectors affecting joints movements.
+        включить и указать значения *From*/*To*, чтобы переопределить диапазоны ключевых кадров объекта или глобальную временную шкалу анимации. Активация этого свойства заставит объект быть анимированным, даже если у него нет ключевых кадров. Это полезно для запекания косвенной анимации, такой как IK-handles/effectors, влияющие на движения костей. 
       </dd>
       <dt>
         Skeleton Root
       </dt>
       <dd>
-        consider object a skeleton root, e.g make all child bones inherit animation parameters from that object.
+        считать объект корнем скелета, например, сделать так, чтобы все дочерние кости наследовали параметры анимации от этого объекта. 
       </dd>
     </dl>
 
 
     [anchor:Frame_Rate]
 
-    <h3>Frame Rate</h3>
+    <h3>Частота Кадров</h3>
 
     <p>
-      The frame rate value (default - 24 fps) which affect the playback speed can be changed using the Playback options panel, located next to the Range Slider.
+      Значение частоты кадров (по умолчанию - 24 fps) влияющее на скорость воспроизведения, можно изменить с помощью панели Параметры воспроизведения, расположенной возле переключения диапазона.
     </p>
 
     <img src="files/animation-maya/frame-rate.jpg" alt="Frame rate selector in Verge3D for Maya" class="centered" style="max-width: 383px">
@@ -196,21 +196,21 @@
 
     [anchor:Animation_Control_with_Puzzles]
 
-    <h2>Animation Control with Puzzles</h2>
+    <h2>Настройка Анимации с помощью Пазлов</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Animation.html">animation puzzles</a> for playing back a pre-made animation (click on the link for more details).
+      Вы можете использовать <strong>animation puzzles</strong> для воспроизведения предварительно созданной анимации (для получения более подробной информации пройдите по <a href="manual/ru/puzzles/Animation.html">ссылке</a>).
     </p>
 
     <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered" style="max-width: 1000px">
 
     <p>
-      Animation can also be implemented with other visual scripting blocks - see <a href="manual/ru/puzzles/Camera.html">Camera</a> and <a href="manual/ru/puzzles/Time.html">Time</a> puzzles.
+      Анимация также может быть реализована с использованием других блоков Puzzles - смотрите пазлы <a href="manual/ru/puzzles/Camera.html">Camera</a> и <a href="manual/ru/puzzles/Time.html">Time</a>. 
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
