--- a/manual/ru/max/Installation.html
+++ b/manual/ru/max/Installation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: Installation - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Установка - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="This page describes the installation procedure for 3ds Max version of Verge3D."/>
     <base href="../../../" />
@@ -9,63 +9,64 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Installation / 3ds Max</h1>
+    <h1>Установка / 3ds Max</h1>
 
     [contents]
 
 
     [anchor:Prerequisites]
 
-    <h2>Prerequisites</h2>
+    <h2>Необходимые Условия</h2>
 
     <h3>3ds Max</h3>
 
     <p>
-    Verge3D works on top of Autodesk 3ds Max 2019-2022 which should be installed first. If this is not the case, you can download a free trial bundle from Autodesk's <a href="https://www.autodesk.com/products/3ds-max/free-trial" target="_blank">website</a>, or try Verge3D for Blender instead.
+      Verge3D может работать поверх Autodesk 3ds Max 2019-2022, который необходимо установить первым. В противном случае вы можете загрузить бесплатный пробный пакет с <a href="https://www.autodesk.com/products/3ds-max/free-trial" target="_blank">сайта</a> Autodesk или попробовать Verge3D для Blender.
     </p>
 
     <p>
-    We recommend using the latest version of 3ds Max (2022 at the time of writing) for best results.
+      Мы рекомендуем использовать последнюю версию 3ds Max (на момент написания это версия 2022) для достижения наилучшего результата.
     </p>
 
-    <h3>Operating system</h3>
+    <h3>Операционная система</h3>
 
     <p>
-    We recommend using Verge3D on Windows 10 with latest video drivers installed. No admin privileges are required for installation.
+      Мы рекомендуем использовать Verge3D на Windows 10 с установленными последними видеодрайверами. Для установки не требуются привилегии администратора.
     </p>
 
-    <h3>Web browser</h3>
+    <h3>Веб-браузер</h3>
 
     <p>
-    Verge3D can work in any browser such as Chrome, Firefox, Opera, Edge or Internet Explorer 11. We, however, recommend to use the Chrome browser for development as it is fast and provides good development tools. You might want to make it your default browser for more convenient previews.
+    Verge3D может работать с любыми из следующих браузеров: Chrome, Firefox, Opera, Edge или Internet Explorer 11. 
+    Однако мы рекомендуем использовать браузер Chrome, так как он быстрый и предоставляет хорошие инструменты для разработки. Возможно, вы захотите сделать его браузером по умолчанию для более удобного предварительного просмотра.
     </p>
 
 
 
     [anchor:Verge3D_Installer]
 
-    <h2>Verge3D Installer</h2>
+    <h2>Установщик Verge3D</h2>
 
     <p>
-    <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Download</a> the Verge3D bundle and double click on the <strong>.exe</strong> file to run the installer.
+    <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Загрузите</a> пакет Verge3D и дважды щелкните мышкой на файле <strong>.exe</strong>, чтобы запустить программу установки.
     </p>
 
     <img src="files/installation_3ds_max/installer-max-starting.jpg" class="centered" style="max-width: 500px">
 
     <p>
-    Choose an installation folder that have enough permissions for reading and writing (or better leave it by default). Installing in a system directory such as "Program Files" or "Desktop" is not recommended.
+      Выберите папку для установки, которая имеет достаточно прав на чтение и запись (или лучше оставьте ее по умолчанию). Не рекомендуется устанавливать в системные папки "Program Files" и "Desktop". 
     </p>
 
     <img src="files/installation_3ds_max/installer-max-choosing-path.jpg" class="centered" style="max-width: 499px">
 
     <p>
-    Once the installation is complete, you may open 3ds Max. If you had it running, be sure to close and open it again. Now you should see *Verge3D* menu in the main menu bar.
+      После завершения установки вы можете открыть 3ds Max. Если он был запущен, не забудьте закрыть и открыть его снова. Теперь вы должны увидеть меню *Verge3D* в строке главного меню.
     </p>
 
     <img src="files/installation_3ds_max/installation-max-checking-menu.jpg" class="centered" style="max-width: 700px">
 
     <p>
-    As of version 2.15, you may also launch the App Manager without running 3ds Max by clicking on the desktop icon or using the Start menu.
+      Начиная с версии 2.15, вы также можете запустить App Manager без запуска 3ds Max, щелкнув значок на рабочем столе или используя меню "Пуск".
     </p>
 
     <img src="files/installation_3ds_max/app-manager-desktop-launcher.jpg" class="centered">
@@ -74,48 +75,48 @@
 
     [anchor:Configuring_Plugin_Path_Manually]
 
-    <h2>Configuring Plugin Path Manually</h2>
+    <h2>Настройка Пути Плагина Вручную</h2>
 
     <p>
-    Sometimes Verge3D menu won't show up. This may happen due to various reasons:
+      Иногда меню Verge3D не отображается. Это может произойти по разным причинам:
     </p>
 
     <ul>
-      <li>You disabled the *Auto-Configure* option in the installer.</li>
-      <li>You installed and running a new version of 3ds Max.</li>
-      <li>You switched Windows user.</li>
+      <li>Вы отключили опцию *Auto-Configure* в программе установки.</li>
+      <li>Вы установили и запустили новую версию 3ds Max.</li>
+      <li>Вы сменили пользователя Windows.</li>
     </ul>
 
     <p>
-    In such the case, you may use the following procedure to configure the plugin path manually.
+      В этом случае вы можете использовать следующую процедуру для настройки пути к плагину вручную.
     </p>
 
     <p>
-    Run 3ds Max, and select "Configure System Paths..." under "Customize" in the main menu bar.
+      Запустите 3ds Max и выберите "Configure System Paths..." в разделе "Customize" в строке главного меню.
     </p>
 
     <img src="files/installation_3ds_max/installation_3ds_max1.png" class="centered" style="max-width: 1000px">
 
     <p>
-    As of version 2020 it is called "Configure User and System Paths...".
+      В версии 2020 он называется  "Configure User and System Paths...".
     </p>
 
     <img src="files/installation_3ds_max/installation_3ds_max1-2020.png" class="centered" style="max-width: 1000px">
 
     <p>
-    Switch to the "3rd Party Plug-ins" tab and click the "Add..." button.
+      Перейдите на вкладку "3rd Party Plug-ins" и нажмите кнопку "Add...".
     </p>
 
     <img src="files/installation_3ds_max/installation_3ds_max2.png" class="centered" style="max-width: 1000px">
 
     <p>
-    Navigate to the folder in which Verge3D is installed and then to the "max_plugin" folder inside it. Click "Use Path".
+      Перейдите в папку, в которой установлен Verge3D, а затем в папку "max_plugin" внутри нее. Нажмите "Use Path".
     </p>
 
     <img src="files/installation_3ds_max/installation_3ds_max3.png" class="centered" style="max-width: 1000px">
 
     <p>
-    Click "OK" and *re-open 3ds Max*.
+      Нажмите "OK" и перезапустите 3ds Max.
     </p>
 
     <img src="files/installation_3ds_max/installation_3ds_max4.png" class="centered" style="max-width: 1000px">
@@ -124,97 +125,97 @@
 
     [anchor:Troubleshooting]
 
-    <h2>Troubleshooting</h2>
+    <h2>Устранение Неполадок</h2>
 
 
     [anchor:no_verge3d_menu]
 
-    <h3>Still no Verge3D Menu</h3>
+    <h3>Меню Verge3D по-прежнему отсутствует</h3>
 
     <p>
-    In some rare cases, the Verge3D menu may not show up in the main menu bar even if you configured the plugin path and re-opened 3ds Max. To register the menu manually, go to *Utilities*, click *MaxScript* and select *Verge3D* in the dropdown menu. Then click *Register Verge3D menu*.
+      В некоторых редких случаях меню Verge3D может не отображаться в строке главного меню, даже если вы настроили путь к плагину и снова открыли 3ds Max. Чтобы зарегистрировать меню вручную, перейдите в раздел *Утилиты*, нажмите *MaxScript* и выберите *Verge3D* в выпадающем меню. Затем нажмите *Register Verge3D menu*.
     </p>
 
     <img src="files/installation_3ds_max/installation_3ds_max-registering_manually.jpg" class="centered" style="max-width: 1000px">
 
     [anchor:verge3d_props_missing]
 
-    <h3>Verge3D Properties on Objects are Missing</h3>
+    <h3>Свойства Verge3D для Объектов отсутствуют</h3>
 
     <p>
-    Custom Verge3D-specific properties are added automatically to objects upon their creation if <strong>Verge3D > Auto-Assign Verge3D Params</strong> is enabled. Verge3D params are not created though in the cases when you import a scene, open a file which was created before Verge3D was installed, or if the above-mentioned option is switched off.
+      Пользовательские свойства, специфичные для Verge3D, автоматически добавляются к объектам при их создании, если включена опция <strong>Verge3D > Auto-Assign Verge3D Params</strong>. Параметры Verge3D не создаются в случаях импорта сцены, открытия файла, который был создан до установки Verge3D, или если вышеупомянутая опция выключена. 
     </p>
 
     <img src="files/installation_3ds_max/troubleshooting-adding-object-params.jpg" class="centered" style="max-width: 615px">
 
     <p>
-    Either way, you can add Verge3D settings to existing objects manually, by going to the *Utilities* tab, selecting *Verge3D* under *MAXScript* and clicking *Add Verge3D Params* for selected objects.
+      В любом случае, вы можете добавить параметры Verge3D к существующим объектам вручную, перейдя на вкладку *Utilities*, выбрав *Verge3D* в разделе *MAXScript* и нажав *Add Verge3D Params* для выбранных объектов. 
     </p>
 
     [anchor:python3_conflict]
 
-    <h3>Module use of python37.dll conflicts with this version of Python</h3>
+    <h3>Использование модуля python37.dll конфликтует с этой версией Python</h3>
 
     <p>
-      If you see this error in 3ds Max 2021+ (upon startup or when trying to export something)...
+      Если вы видите эту ошибку в 3ds Max 2021+ (при запуске или при попытке экспортировать что-либо)...
     </p>
 
     <img src="files/installation_3ds_max/python3-conflict.jpg" class="centered" style="max-width: 267px">
 
     <p>
-      ...then it's possible that some plugin cluttered with your system environment variables (forcing 3ds Max to use an outdated version of Python).
+      ...тогда возможно, что какой-то плагин мешает корректной работе переменных среды вашей системы (заставляя 3ds Max использовать устаревшую версию Python).
     </p>
 
     <p>
-      To fix it, run System Properties, by searching for <em>"edit the system environment variables"</em> and clicking on the appeared application:
+      Чтобы исправить это, запустите Свойства системы, найдя в поиске <em>"изменение системных переменных среды"</em> и щелкните на появившемся приложении:
     </p>
 
     <img src="files/installation_3ds_max/win-environment-search-app.jpg" class="centered" style="max-width: 785px">
 
     <p>
-      In the *System Properties* dialog click on the <strong>Environment Variables...</strong> button:
+      В диалоговом окне *Свойства системы* нажмите кнопку <strong>Переменные среды...</strong>:
     </p>
 
     <img src="files/installation_3ds_max/win-system-properties.jpg" class="centered" style="max-width: 425px">
 
     <p>
-      In the next dialog find the *ADSK_3DSMAX_PYTHON_VERSION* variable. It might be located in the *User variables* or *System variables* list.
+      В следующем диалоговом окне найдите переменную *ADSK_3DSMAX_PYTHON_VERSION*. Она должна находиться в списке *Переменные пользователя* или *Системные переменные*.
     </p>
 
     <img src="files/installation_3ds_max/win-environment-vars.jpg" class="centered" style="max-width: 574px">
 
     <p>
-      Replace value *2* to *3* by clicking the <strong>Edit...</strong> button. Click *OK* then restart your system.
+      Замените значение *2* на *3* нажав на кнопку <strong>Изменить...</strong>. Нажмите *OK*, а затем перезапустите систему.
     </p>
 
 
     [anchor:Uninstalling]
 
-    <h2>Uninstalling</h2>
+    <h2>Деинсталляция</h2>
 
     <p>
-      In order to remove Verge3D files, as well as the desktop icon and the Start menu entry, from your computer, you may use the standard *Add or remove programs* function of Windows. It won't touch the *applications* and *puzzles* folders where user files are stored, so you may remove them manually if you don't need them anymore.
+      Чтобы удалить файлы Verge3D, а также значок на рабочем столе и в меню "Пуск" с компьютера, вы можете воспользоваться стандартной функцией *Добавить или удалить программы* в Windows. Она не затронет папки *applications* и *puzzles*, где хранятся пользовательские файлы, поэтому вы можете удалить их вручную, если они вам больше не нужны. 
     </p>
 
     <img src="files/installation_3ds_max/uninstalling-max.jpg" class="centered" style="max-width: 802px">
 
     <p>
-      Before you uninstall Verge3D, you might need to remove custom Verge3D options assigned to your objects. To do so, go to *Utilities*, click *MaxScript* and select *Verge3D* in the dropdown menu. Then click on the *Cleanup Scene* button.
+      Перед удалением Verge3D вам может понадобиться удалить пользовательские опции Verge3D, назначенные вашим объектам. Для этого перейдите в *Utilities*, нажмите *MaxScript* и выберите *Verge3D* в выпадающем меню. Затем нажмите на кнопку *Cleanup Scene*.
     </p>
 
     <img src="files/installation_3ds_max/cleanup-scene.jpg" class="centered" style="max-width: 355px">
 
 
-    <h2>What's Next</h2>
+    <h2>Что дальше?</h2>
 
     <p>
-      Familiarize yourself with the <a href="manual/ru/max/Beginners-Guide.html">basics</a>!
+      Ознакомьтесь с <a href="manual/ru/max/Beginners-Guide.html">основами</a>!
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
